--- a/templates/news_detail.html
+++ b/templates/news_detail.html
@@ -51,7 +51,7 @@
           </div>
           <div class="col-md-8">
             <div style="padding: unset !important;" class="card-body">
-              <a href="/news/{{news.id}}">
+              <a href="/news/{{news.title}}">
                 <h5 style=" width: 80%;" class="card-title">{{news.title}}</h5>
               </a>
               {% if news.description%}
