--- a/templates/plasticcarts.html
+++ b/templates/plasticcarts.html
@@ -51,7 +51,7 @@
         <input type="checkbox" style="width: 20px; height:20px; position: absolute; right: 20px;">
         <div class="leftside">
             <div class="leftsideup">
-                <a href="/plasticcart/{{cart.id}}">{{cart.title}}<i class="fa-solid fa-wifi" style="color:#3939ff; font-size: 20px;"></i></a>
+                <a href="/plasticcart/{{cart.title}}">{{cart.title}}<i class="fa-solid fa-wifi" style="color:#3939ff; font-size: 20px;"></i></a>
             </div>
             {% if cart.desc %}
             <p style="width: 70%;">{{cart.desc}}</p>
