--- a/templates/companies.html
+++ b/templates/companies.html
@@ -16,7 +16,7 @@
         <div class="card mb-3 {{companie.client_type}}" style="max-width: 100%; ">
             <div class="row g-0">
             <div class="col-3">
-                <img src="{{companie.caps}}" class="img-fluid" style="width: 250px; padding:10px; border-radius: 7%; "  alt="...">
+                <img src={{companie.caps}}  class="img-fluid" style="width: 250px; padding:10px; border-radius: 7%; "  alt="...">
             </div>
             <div class="col-9">
                 <div class="card-body">
