--- a/templates/news.html
+++ b/templates/news.html
@@ -19,7 +19,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <a href="news/{{news.id}}">
+            <a href="news/{{news.title}}">
               <h5 class="card-title">{{news.title}}</h5>
             </a>
             {% if news.description%}
